[gd_scene load_steps=4 format=3 uid="uid://ch82gxdb7tomw"]

[ext_resource type="Texture2D" uid="uid://dq0772s7s1qlo" path="res://aseprite/shadow_ball.png" id="1_4fw5r"]
[ext_resource type="Script" uid="uid://dv3xkn4bkcl82" path="res://key_components/shadow_ball.gd" id="1_v4ko4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v4ko4"]
radius = 21.0

[node name="ShadowBall" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_v4ko4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6, -1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_4fw5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v4ko4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
